2014-08-30  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-print.el (bbdb-print-require): Improve docstring.

2014-08-30  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-print.el (bbdb-print): Clarify prompt for file name.
	Issue message on what to do with TeX file.

2014-08-30  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-print.el (bbdb-print-record): Handle xfields the value
	of which are sexps.

2014-08-09  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-snarf.el (bbdb-snarf): Always install and display the
	new record.

2014-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-mail-alias-list): New function.
	(bbdb-add-mail-alias): Handle multiple records via * prefix.
	Allow addition or deletion of multiple aliases per record.  Fix
	docstring.

2014-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Fix previous change.

2014-07-22  Roland Winkler  <winkler@gnu.org>
	* lisp/Makefile.am: Do not load init files or site files for byte
	compilation (Bug#42482). Use long options.
	* lisp/makefile-temp: Ditto.  New variable emacs_compile.

2014-05-15  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-redisplay-record): Delete record from
	bbdb-records if record is undisplayed.
	* lisp/bbdb-com.el (bbdb-omit-record): Simplify. Handle records at
	beginning and end of bbdb-buffer properly.

2014-05-15  Roland Winkler  <winkler@gnu.org>
	Fix and improve previous patch.
	* lisp/bbdb.el (bbdb-update-unchanged-records): Renamed from
	bbdb-save-unchanged-records.
	(bbdb-with-print-loadably): Put at beginning of bbdb.el.
	(bbdb-change-record): Return record only if we updated it.
	* lisp/bbdb-com.el (bbdb-touch-records): Use
	bbdb-update-unchanged-records.
	(bbdb-insert-field, bbdb-edit-field): Issue message if record
	remained unchanged.

2014-05-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-change-record): If an editing command did not
	change a record compared to its value in bbdb-buffer, do not call