@@ -2,7 +2,7 @@
 ### autogen.sh - tool to help build BBDB from a git checkout
 
 ## Copyright (C) 2013 Christian Egli <christian.egli@sbs.ch>
-## Copyright (C) 2013-2014 Roland Winkler <winkler@gnu.org>
+## Copyright (C) 2013-2015 Roland Winkler <winkler@gnu.org>
 ##
 ## This file is part of the Insidious Big Brother Database (aka BBDB),
 ##
