@@ -1,7 +1,7 @@
 # doc/Makefile.am for BBDB
 #
 # Copyright (C) 2013 Christian Egli <christian.egli@sbs.ch>
-# Copyright (C) 2013-2014 Roland Winkler <winkler@gnu.org>
+# Copyright (C) 2013-2015 Roland Winkler <winkler@gnu.org>
 # 
 # This file is part of the Insidious Big Brother Database (aka BBDB),
 # 
