@@ -1,6 +1,6 @@
 ;;; bbdb-site.el.in --- site-specific variables for BBDB
 
-;; Copyright (C) 2013-2014 Roland Winkler <winkler@gnu.org>
+;; Copyright (C) 2013-2015 Roland Winkler <winkler@gnu.org>
 
 ;; This file is part of the Insidious Big Brother Database (aka BBDB),
 
