@@ -1,3 +1,6 @@
+2015-05-22  Roland Winkler  <winkler@gnu.org>
+	Update copyright year in all files.
+
 2014-08-30  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-print.el (bbdb-print-require): Improve docstring.
 
@@ -1953,7 +1956,7 @@
 ;; coding: utf-8
 ;; End:
 
-  Copyright (C) 2010-2014 Roland Winkler <winkler@gnu.org>
+  Copyright (C) 2010-2015 Roland Winkler <winkler@gnu.org>
 
   This file is part of the Insidious Big Brother Database (aka BBDB),
 
